TESTSFIX: Need to set standard timezone and locale for the epoch to date conversion
The CI/CD system doesn't have my locale nor my date customization.
Also, install ripgrep and correct the skip location.

System-info: Ubuntu 24.04.3 LTS, x86_64
Platform-info: bash 5.2.21(1)-release, Bats 1.10.0

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,4 +12,6 @@ on:
 jobs:
   build:
     uses: inkarkat/scripting-setup/.github/workflows/build.yml@master
+    with:
+      additional-packages: ripgrep
     secrets: inherit
